src/test/ui/parser/pub-method-macro.stderr
error: can't qualify macro invocation with `pub`
  --> $DIR/pub-method-macro.rs:19:9
   |
LL |         pub defn!(f); //~ ERROR can't qualify macro invocation with `pub`
   |         ^^^
   |
   = help: try adjusting the macro to put `pub` inside the invocation

error: aborting due to previous error

